implement AI scoring in quiz